feat: use a new theme

--- a/demos/mdx.mdx
+++ b/demos/mdx.mdx
@@ -1,6 +1,12 @@
 ---
-title: Category theory application in web apps.
+title: Category theory application in web apps
 date: 2020-15-20
+property:
+  - item 1
+  - item 2
+object:
+  propA: Something
+  propB: 123
 ---
 
 # Category theory
